fix: CWU-55 search bar letter spacing

--- a/src/static/assets/scss/molecules/_search-desktop.scss
+++ b/src/static/assets/scss/molecules/_search-desktop.scss
@@ -90,7 +90,6 @@
 	&__input[type='search'] {
 		border: 0;
 		font-size: 16px;
-		letter-spacing: 2px;
 		line-height: 1;
 		opacity: 0;
 		outline: 0;
